# Rivollo.ApplicationServer.Api

./: .gitignore  FRONTEND_AI_CREDITS_INTEGRATION.md  README.md  drop_quotas_column.sql  normalize_license_assignments.sql  pyproject.toml  requirements.txt  rivolloschema.sql
.github/workflows/: deploy-prod.yml  dev-deploy.yml
app/: main.py
app/api/: deps.py
app/core/: config.py  db.py  db_listen.py  security.py
app/database/: dimension_repo.py  gpu_activation_repo.py  link_share_repository.py  payment_repo.py  products_repo.py  promo_repo.py  subscription_repo.py
app/integrations/: fal_tripo_client.py  threed_model_client.py  whatsapp_client.py
app/middleware/: cdn.py
app/models/: __init__.py  gpu_activation.py  license_assignment.py  link_share_log.py  models.py  payment.py  plan.py  promo.py  promo_usage.py  subscription.py  subscription_enums.py  user_device.py  webhook_event.py
app/queries/: subscription_queries.py
app/schemas/: auth.py  notifications.py  payments.py  products.py  razorpay_subscriptions.py  segmentation.py  subscriptions.py  users.py  whatsapp.py
app/services/: account_service.py  ai_suggestion_service.py  auth_service.py  dimension_service.py  email_service.py  gpu_status_service.py  image_segmentation_service.py  licensing_service.py  link_share_service.py  storage.py  (+12 more)
docs/: app_token_authentication.md  create-product-3d-frontend-integration.md  estimate-time-feature.md  estimate-time-frontend-integration.md  websocket-gpu-estimate-frontend-integration.md
scripts/: seed_data.py
sql/: add_app_tokens_table.sql
tests/: test_token_cache.py
(+15 files in other folders)
