[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rivollo-api"
version = "0.1.0"
description = "Rivollo backend API service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
	{ name = "Rivollo" }
]
dependencies = [
	"fastapi>=0.115,<0.116",
	"uvicorn[standard]>=0.30,<0.31",
	"pydantic>=2.9,<3",
	"pydantic-settings>=2.5,<3",
	"sqlalchemy>=2.0,<3",
	"greenlet>=3.0,<4",
	"asyncpg>=0.31,<1",
	"psycopg[binary]>=3.2,<4",
	"alembic>=1.13,<2",
	"python-jose[cryptography]>=3.3,<4",
	"argon2-cffi>=23.1,<24",
	"passlib[argon2]>=1.7.4,<2",
	"python-multipart>=0.0.9,<0.1",
	"httpx>=0.27,<0.28",
	"email-validator>=2.1,<3",
	"python-dotenv>=1.0,<2",
	"azure-monitor-opentelemetry>=1.5,<2",
	"opentelemetry-instrumentation-logging>=0.58b0,<0.59",
	"azure-storage-blob>=12.19,<13",
	"azure-servicebus>=7.11,<8",
	"gunicorn>=21.2,<22",
	"orjson>=3.10,<4",
	"geoalchemy2>=0.14,<0.15",
	"rembg>=2.0,<3",
	"pillow>=10.0,<12"
]

[project.optional-dependencies]
test = [
	"pytest>=8.3,<9",
	"pytest-asyncio>=0.23,<0.24",
	"pytest-cov>=5.0,<6",
	"httpx>=0.27,<0.28",
	"anyio>=4.4,<5"
]
dev = [
	"ruff>=0.6,<0.7",
	"mypy>=1.10,<2"
]
conversion = [
	"usd-core>=24,<25",
	"pygltflib>=1.16,<2",
	"trimesh>=4.0,<5"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["screen*", "storage*"]
